--- a/api/qsharp/microsoft.quantum.preparation.prepareuniformsuperposition.yml
+++ b/api/qsharp/microsoft.quantum.preparation.prepareuniformsuperposition.yml
@@ -4,12 +4,13 @@ name: PrepareUniformSuperposition
 type: operation
 namespace: microsoft.quantum.preparation
 summary: >-
-  创建对 superposition 进行编码的状态为0的统一 `nIndices` 。
+  创建对 superposition 进行编码的状态为0的统一 `nIndices - 1` 。
 
 
   也就是说，在给定输入状态 $ \ket{0\cdots 0} $ 的情况下，此单一 $U $ 将在所有数字状态 $0 $ 到 $M-$1 上创建一个统一的 superposition。 换句话说，$ $ \begin{align} U\ket {0} = \frac {1} {\sqrt{m}}\ sum_ {j = 0} ^ {M-1} \ket{j}。
 
   \end{align} $ $。
+remarks: 此操作为 adjointable，但 `indexRegister` `nIndices` 在这种情况下，要求在 superposition 的基础上是统一的。
 examples: >-
   下面的示例准备 {1} $3 $ qubits 上的状态 $ \frac {\sqrt {6} } \ sum_ {j = 0} ^ {5} \ket{j} $。
 
@@ -20,6 +21,7 @@ examples: >-
 
   using(indexRegister = Qubit[3]) {
       PrepareUniformSuperposition(nIndices, LittleEndian(indexRegister));
+      // ...
   }
 
   ```
@@ -46,9 +48,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 442daa4affb6b59191af9117a8094f7bfbf71302
-  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
+  ms.openlocfilehash: ff1e1e50992b209865c4e3b1c82e9faec9199d58
+  ms.sourcegitcommit: 685a8ab16d7e6a25e63a168d6e7c385fa6e876cc
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/02/2020
-  ms.locfileid: "89331324"
+  ms.lasthandoff: 09/29/2020
+  ms.locfileid: "91485390"
