commit translated contents

--- a/api/qsharp/microsoft.quantum.canon.applyif.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyif.yml
@@ -17,7 +17,7 @@ examples: >-
   let bitstring = [true, false, true];
 
   using (register = Qubit(3)) {
-      ApplyToEach(ApplyIf(X, _, _), Zip(bitstring, register));
+      ApplyToEach(ApplyIf(X, _, _), Zipped(bitstring, register));
       // register should now be in the state |101⟩.
       ...
   }
@@ -59,9 +59,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifa
 - microsoft.quantum.canon.applyifca
 metadata:
-  ms.openlocfilehash: 7d74e21954daef04543dfc42534502b2fa8aab2e
-  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
+  ms.openlocfilehash: 70c63cb7a7e7f1818a2961825ca14309360eb225
+  ms.sourcegitcommit: 685a8ab16d7e6a25e63a168d6e7c385fa6e876cc
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/02/2020
-  ms.locfileid: "89350551"
+  ms.lasthandoff: 09/29/2020
+  ms.locfileid: "91473371"
