--- a/api/qsharp/microsoft.quantum.canon.applyifc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifc.yml
@@ -19,7 +19,7 @@ examples: >-
   let bitstring = [true, false, true];
 
   using (register = Qubit(3)) {
-      ApplyToEach(ApplyIf(X, _, _), Zip(bitstring, register));
+      ApplyToEach(ApplyIf(X, _, _), Zipped(bitstring, register));
       // register should now be in the state |101⟩.
       ...
   }
@@ -65,9 +65,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifa
 - microsoft.quantum.canon.applyifca
 metadata:
-  ms.openlocfilehash: 0c4a650eabe75c3ab62556daf19647e63c1a2b46
-  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
+  ms.openlocfilehash: 7662b3d8fe8418402a47f4da0cb88d710e1c4665
+  ms.sourcegitcommit: 685a8ab16d7e6a25e63a168d6e7c385fa6e876cc
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/02/2020
-  ms.locfileid: "89350517"
+  ms.lasthandoff: 09/29/2020
+  ms.locfileid: "91473303"
