--- a/articles/user-guide/toc.yml
+++ b/articles/user-guide/toc.yml
@@ -1,13 +1,13 @@
 - name: 概述/内容
   href: index.md
-- name: Q# 基本信息
-  href: basics.md
+- name: Q# 程序
+  href: programs.md
 - name: Q# 程序的运行方式
   href: host-programs.md
-- name: Q# 语言
+- name: 测试和调试
+  href: testing-debugging.md
+- name: Q# 语言指南
   href: language/toc.yml
-- name: 使用 Q#
-  href: using-qsharp/toc.yml
 - name: 模拟器和资源估算器
   href: machines/toc.yml
 - name: Q# 库
