Initialize Docs repository: https://github.com/MicrosoftDocs/quantum-docs-pr.zh-CN of branch live

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -69,7 +69,7 @@
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
   "contribution_branch_mappings": {
-     "live-sxs": "live"
+    "live-sxs": "live"
   },
   "dependent_repositories": [
     {
@@ -92,6 +92,12 @@
         "live": "live",
         "master": "master"
       }
+    },
+    {
+      "path_to_root": "_themes",
+      "url": "https://github.com/Microsoft/templates.docs.msft.zh-CN",
+      "branch": "main",
+      "branch_mapping": {}
     }
   ],
   "branch_target_mapping": {},
